# cloud9

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  cloud9.example.toml  commitlint.config.js  deny.toml  release-please-config.json  rustfmt.toml  typos.toml
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yml  commitlint.yml  release.yml  security.yml  typos.yml
cloud9/: Cargo.toml
cloud9-consensus/: Cargo.toml
cloud9-consensus/src/: lib.rs  raft.rs
cloud9-core/: Cargo.toml
cloud9-core/src/: diagnostics.rs  fs.rs  lib.rs  strings.rs  sync.rs
cloud9-node/: Cargo.toml
cloud9-node/src/: auth.rs  command.rs  config.rs  lib.rs  runtime.rs  service.rs  store.rs  tests.rs  transport.rs
cloud9-proto/: Cargo.toml  build.rs
cloud9-proto/proto/cloud9/kv/v1/: kv.proto
cloud9-proto/src/: lib.rs
cloud9-storage/: Cargo.toml
cloud9-storage/src/: lib.rs
cloud9-wal/: Cargo.toml
cloud9-wal/src/: error.rs  format.rs  lib.rs  record.rs  segment.rs  tests.rs  wal.rs
cloud9/src/: main.rs
consensus/cloud9-raft/: ARCHITECTURE.md  Cargo.toml  DISSERTATION_CHECKLIST.md  TODO.md
consensus/cloud9-raft-io/: Cargo.toml
consensus/cloud9-raft-io/src/: lib.rs  read_index.rs  session.rs  storage.rs  transport.rs
consensus/cloud9-raft/src/: lib.rs
consensus/cloud9-raft/src/raft/: candidate.rs  core.rs  event.rs  follower.rs  leader.rs  log.rs  membership.rs  mod.rs  precandidate.rs
consensus/cloud9-raft/tests/: admission.rs  efficiency.rs  optimizations.rs  prevote.rs  property.rs  state_machine.rs
docs/: README.md  design-notes.md
jepsen/: README.md  project.clj
jepsen/scripts/: build-target.sh
jepsen/src/cloud9/: jepsen.clj
jepsen/test/cloud9/: jepsen_test.clj
spec/: 00-vision.md  01-mvcc.md  02-timestamps.md  03-external-consistency.md  04-truetime-analysis.md  05-aws-time-infrastructure.md  06-sharding-partitioning.md  07-sql-kv-unification.md  08-transactions.md  09-market-analysis.md  10-consensus.md  11-indexes-schema.md  12-implementation-roadmap.md  README.md
