[package]
name = "cloud9-node"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lints]
workspace = true

[dependencies]
cloud9-core = { workspace = true }
cloud9-raft = { workspace = true }
cloud9-storage = { workspace = true }
cloud9-proto = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
