[package]
name = "cloud9-node"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
cloud9-core = { workspace = true }
cloud9-raft = { workspace = true }
cloud9-storage = { workspace = true }
cloud9-wal = { workspace = true }
cloud9-proto = { workspace = true }
connectrpc = { workspace = true, features = ["axum"] }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
