[package]
name = "cloud9-proto"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lints]
workspace = true

[dependencies]
cloud9-core = { workspace = true }
serde = { workspace = true }
buffa = { workspace = true }
connectrpc = { workspace = true }
http-body = { workspace = true }

[build-dependencies]
connectrpc-build = { workspace = true }
