[package]
name = "cloud9-raft"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lints]
workspace = true

[dependencies]
cloud9-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-state-machine = { workspace = true }
